# csgoscan

./: .gitignore  Dockerfile  README.md  classes.wsd  docker-compose.yml  pyproject.toml  scripts.py
.github/workflows/: build-and-deployment.yml  deployment.yml  docker-image.yml  test.yml
csgoscan/: __init__.py  dependencies.py  errors.py  getter.py  main.py  media.py  player.py  profile.py  settings.py  utils.py  website.py
csgoscan/templates/: index.html.j2  player.html.j2  player_page.html.j2
csgoscan/templates/components/: faceit_card.html.j2  faceit_media_card.html.j2  links_card.html.j2  other_media_card.html.j2  player_card.html.j2  steam_card.html.j2  steam_media_card.html.j2
tests/: profile_test.py
