[tool.poetry]
name = "csgoscan"
version = "0.1.0"
description = ""
authors = ["felixcapuano <felix.capuano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
requests = "^2.28.2"
jinja2 = "^3.1.2"
xmltodict = "^0.13.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "scripts:dev"
start = "scripts:start"